# iohidmanager-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_list_devices.rs  02_filter_keyboards.rs  03_matching_and_properties.rs  04_elements_and_values.rs  05_callback_registration.rs  06_manager_callbacks.rs  07_device_roundtrip.rs  08_element_attachment.rs  09_value_constructors.rs  10_transaction_roundtrip.rs  11_queue_roundtrip.rs  12_keys_catalog.rs  13_usage_catalog.rs  14_service_plugin_ids.rs  15_event_system_catalog.rs  16_low_level_sdk_types.rs  17_async_stream.rs
src/: async_api.rs  bridge.rs  error.rs  lib.rs
src/ffi/: mod.rs
src/hid/: device.rs  element.rs  event_system.rs  generated_keys.rs  generated_usage.rs  keys.rs  manager.rs  mod.rs  queue.rs  service_plugin.rs  transaction.rs  usage.rs  value.rs
swift-bridge/: Package.swift
swift-bridge/Sources/IOHIDManagerBridge/: Device.swift  Element.swift  EventSystem.swift  Keys.swift  Manager.swift  Queue.swift  ServicePlugIn.swift  Support.swift  Transaction.swift  Usage.swift  Value.swift
swift-bridge/Sources/IOHIDManagerBridge/include/: IOHIDManagerBridge.h
tests/: api_coverage.rs  async_stream_tests.rs  device_tests.rs  element_tests.rs  event_system_tests.rs  keys_tests.rs  manager_tests.rs  queue_tests.rs  sdk_gap_surface_tests.rs  service_plugin_tests.rs  transaction_tests.rs  usage_tests.rs  value_tests.rs
