[package]
name = "iohidmanager"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/iohidmanager-rs"
repository = "https://github.com/doom-fish/iohidmanager-rs"
description = "Safe Rust bindings for Apple's IOKit HID — enumerate connected mice, keyboards, gamepads, and other HID devices on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["hid", "iokit", "usb", "macos", "input"]
categories = ["api-bindings", "os::macos-apis", "hardware-support"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "iohidmanager"
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
regex-lite = "0.1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_list_devices"

[[example]]
name = "02_filter_keyboards"

[profile.release]
debug = "full"
strip = "none"
