[package]
name = "iohidmanager"
version = "0.10.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/iohidmanager-rs"
repository = "https://github.com/doom-fish/iohidmanager-rs"
description = "Safe Rust bindings for Apple's IOKit HID — enumerate, inspect, and subscribe to HID devices on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["hid", "iokit", "usb", "macos", "input"]
categories = ["api-bindings", "os::macos-apis", "hardware-support"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "iohidmanager"
crate-type = ["lib"]

[features]
default = ["raw-ffi"]
raw-ffi = []
async = []

[dependencies]
apple-cf = { path = "../apple-cf-rs", version = ">=0.9, <0.10", default-features = false }
iokit = { path = "../iokit-rs", version = ">=0.4, <0.6" }
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.4" }

[dev-dependencies]
regex-lite = "0.1"
pollster = "0.3"

[patch.crates-io]
apple-cf = { path = "../apple-cf-rs" }
doom-fish-utils = { path = "../doom-fish-utils" }

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_list_devices"

[[example]]
name = "02_filter_keyboards"

[[example]]
name = "03_matching_and_properties"

[[example]]
name = "04_elements_and_values"

[[example]]
name = "05_callback_registration"

[[example]]
name = "06_manager_callbacks"

[[example]]
name = "07_device_roundtrip"

[[example]]
name = "08_element_attachment"

[[example]]
name = "09_value_constructors"

[[example]]
name = "10_transaction_roundtrip"

[[example]]
name = "11_queue_roundtrip"

[[example]]
name = "12_keys_catalog"

[[example]]
name = "13_usage_catalog"

[[example]]
name = "14_service_plugin_ids"

[[example]]
name = "15_event_system_catalog"

[[example]]
name = "16_low_level_sdk_types"

[[example]]
name = "17_async_stream"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
